examples/test/testpolicy7645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7645
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key38: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value19
          key5: value37
      podSelector:
        matchLabels:
          key35: value13
          key22: value7
